modify user-related files